--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>jesusisawesome 홈페이지 입니다.</p>
+    <p>jesusisawesome 홈페이지 입니다.
+         ㅇ
+      |  .  |
+      _  _
+        |
+      |    |
+    </p>
 </body>
 </html>
