--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p>jesusisawesome 홈페이지 입니다.
-         ㅇ
-      |  .  |
-      _  _
-        |
-      |    |
-    </p>
+    <p>jesusisawesome 홈페이지 입니다.</p>
+    <pre>  ㅇ
+        |  .  |
+        _  _
+          |
+        |    |</pre>
+         
+    
 </body>
 </html>
