--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <p>jesusisawesome 홈페이지 입니다.</p>
- 
+    <pre>  ㅇ
+        |  .  |
+        _  _
+          |
+        |    |</pre>
          
     
 </body>
